@@ -5,6 +5,8 @@ interface nsIFirePHP : nsISupports
 {
   void setRequestHeaderEnabled(in boolean oo);
   boolean getRequestHeaderEnabled();
+  void setExtensionVersion(in string version);
+  string getExtensionVersion();
 
 	void setResponseData(in string RequestID, in string Data);
 	string getRequestIDs();
